[gd_scene load_steps=4 format=3 uid="uid://bg2hckl16bqcu"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_rrc4s"]
[ext_resource type="PackedScene" uid="uid://b5hpgl4qvbqel" path="res://Scenes/BG.tscn" id="1_wdumw"]
[ext_resource type="Theme" uid="uid://kcnk43rkyg48" path="res://Assets/GameTheme.tres" id="2_4wxo0"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rrc4s")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = -280.0
offset_top = -180.0
offset_right = 250.0
offset_bottom = -61.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "Gravity Glide"
horizontal_alignment = 1
vertical_alignment = 1

[node name="settings" type="Button" parent="."]
layout_mode = 2
offset_left = 384.0
offset_top = -288.0
offset_right = 514.0
offset_bottom = -243.0
theme = ExtResource("2_4wxo0")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -359.0
offset_bottom = 166.0
grow_horizontal = 0
theme_override_constants/margin_right = 10

[node name="BoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="contGame" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4wxo0")
text = "Continue Game"

[node name="leader" type="Button" parent="MarginContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4wxo0")
text = "Leaderboard"

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 330.0
offset_bottom = 166.0
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="newGame" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4wxo0")
text = "New Game"

[node name="viewControl" type="Button" parent="MarginContainer3/VBoxContainer"]
layout_direction = 1
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_4wxo0")
text = "View Controls"

[node name="RewardStore" type="Button" parent="."]
layout_mode = 0
offset_left = -512.0
offset_top = -288.0
offset_right = -384.0
offset_bottom = -240.0
theme = ExtResource("2_4wxo0")
theme_override_font_sizes/font_size = 25
text = "Store"

[node name="BG" parent="." instance=ExtResource("1_wdumw")]

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = -113.0
offset_top = 190.0
offset_right = 104.0
offset_bottom = 257.0
theme = ExtResource("2_4wxo0")
text = "Quit
"

[node name="Currency" type="Label" parent="."]
offset_left = -368.0
offset_top = -277.0
offset_right = -48.0
offset_bottom = -243.0
theme_override_font_sizes/font_size = 24
text = "Stars:"

[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/contGame" to="." method="_on_cont_game_pressed"]
[connection signal="pressed" from="MarginContainer/BoxContainer/leader" to="." method="_on_leader_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/newGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer3/VBoxContainer/viewControl" to="." method="_on_view_control_pressed"]
[connection signal="pressed" from="RewardStore" to="." method="_on_reward_store_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
